Add basic box-model styling; add the start of a home page styles module

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,2 +1,17 @@
 @use "base/colours";
 
+html,
+body {
+    background: colours.$navy;
+	margin: 0;
+}
+
+html {
+	box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+}
