Add uppercase text mixin

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -1,3 +1,10 @@
+//Mixins
+@mixin uppercase {
+    font-weight: 700;
+    letter-spacing: 0.05rem;
+    text-transform: uppercase;
+}
+
 //TT Ramillas
 @font-face {
     font-family: "TTRamillas-Regular";
