--- a/styles/components/container.module.scss
+++ b/styles/components/container.module.scss
@@ -3,6 +3,9 @@
 .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    max-width: 1100px;
+    margin: 0 auto;
+    width: 100%;
 
     @include breakpoints.laptop {
         grid-template-columns: repeat(12, 1fr);
