Add fluid margin to hero subheading to dynamically reduce the gap between it and the heading

--- a/styles/components/hero.module.scss
+++ b/styles/components/hero.module.scss
@@ -16,7 +16,7 @@
             @include font-size(24px);
             color: colours.$redgrey;
             line-height: 2;
-            margin: -2rem 0 0 0;
+            margin: rfs-fluid-value(-2rem) 0 0 0;
         }
 
         @include breakpoints.laptop {
