Add 'dirty gold' colour to colours

--- a/styles/base/_colours.scss
+++ b/styles/base/_colours.scss
@@ -8,6 +8,8 @@ $navy: #2F2A32;
 $lightgrey: #E3DDDD;
 //Primarily used for subheading text
 $redgrey: #C2ABAB;
+//A $yellow variant used for text (e.g. the Chinese text for Gold Star Baijiu) on a $yellow background
+$dirtygold: #89774A;
 //Used as background for Peaches of Immortality Baijiu
 $purple: #504357;
 //A $grey variant used for subheadings, e.g. for the Peaches of Immortality Baijiu
