Add Chinese script font

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -85,3 +85,9 @@
     font-weight: 700; 
     src: url("../../public/fonts/Poppins/Poppins-BoldItalic.otf") format("opentype");
 }
+
+@font-face {
+    font-family: "Jin Mei Mao Xing Shu";
+    font-weight: 400;
+    src: url("../../public/fonts/Jin\ Mei\ Mao\ Xing\ Shu/jinmeimaoxingshu.ttf") format("truetype");
+}
