--- a/styles/components/product.module.scss
+++ b/styles/components/product.module.scss
@@ -52,6 +52,7 @@
         position: absolute;
         text-shadow: 0 20px 30px rgba(colours.$yellow, 15%);
         top: 7%;
+        user-select: none;
         z-index: 1;
     }
 
