--- a/styles/components/product.module.scss
+++ b/styles/components/product.module.scss
@@ -101,3 +101,13 @@
         }
     }
 }
+
+.product_compact {
+    & .product_name {
+        @include font-size(24px);
+        
+        @include breakpoints.laptop {
+            min-height: 4.2rem;
+        }
+    }
+}
